--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,4 +1,80 @@
-/* Put your CSS here */
-html, body {
-    margin: 20px;
+/* Base */
+body {
+	margin: 2rem;
+}
+h1,h2,h3,p,ul {
+	margin: 0 0 1rem;
+}
+
+/* Navigation */
+a,
+a:visited {
+	color: blue;
+}
+a.active {
+	color: green;
+}
+a:hover {}
+nav a {
+	margin-right: 0.5rem;
+}
+
+/* For debugging */
+.Template {
+	margin: 2rem 0 0.5rem;
+	font-family: monospace;
+	color: #888;
+}
+
+/* Overlay */
+.Overlay {
+	height: 100%;
+	width: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	cursor: -webkit-zoom-out; cursor: -moz-zoom-out;
+	-webkit-transition: background-color 200ms;
+	-moz-transition: background-color 200ms;
+	transition: background-color 200ms;
+}
+.Overlay.is-active {
+	/*background-color: #fff;*/
+	background-color: rgba(0, 0, 0, 0.2);
+}
+
+/* Modal inside an overlay */
+.Modal {
+	width: 300px;
+	margin: 1rem auto;
+	padding: 1rem;
+	background-color: #fff;
+	cursor: initial;
+	opacity: 0.2;
+	-webkit-transform: translate3d(0,-0.5rem,0) scale(0.99);
+	-webkit-transition: opacity 150ms, -webkit-transform 150ms ease-in-out;
+	-moz-transition: opacity 150ms, -webkit-transform 150ms ease-in-out;
+	transition: opacity 150ms, -webkit-transform 150ms ease-in-out;
+}
+.Overlay.is-active .Modal {
+	opacity: 1;
+	-webkit-transform: translate3d(0,0,0) scale(1);
+}
+
+/* Posts */
+.is-featured {
+	font-weight: bold;
+}
+
+
+
+
+button {
+	background-color: #fff;
+	border: 2px solid;
+	font-size: 11px;
+	text-transform: uppercase;
+	font-weight: bold;
+	letter-spacing: 0.1em;
+	padding: 0.3em 0.4em 0.2em;
 }
