Add and use ember-data

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -95,4 +95,9 @@ button {
 	font-weight: bold;
 	letter-spacing: 0.1em;
 	padding: 0.3em 0.4em 0.2em;
+	line-height: 1;
+}
+.Button--close {
+	font-size: 1rem;
+	padding: 0.15em 0.4em 0.25em 0.39em;
 }
