--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -57,6 +57,7 @@ nav a {
 	padding: 2rem 1rem 1rem;
 	background-color: #fff;
 	cursor: initial;
+	border: 2px solid;
 
 	/* initial 'inactive' state */
 	opacity: 0;
