--- a/app/templates/components/modal-dialog.hbs
+++ b/app/templates/components/modal-dialog.hbs
@@ -1,5 +1,5 @@
 <div class="Area">
-	<p class="Template">[components/modal-dialog]</p>
+	<p class="Area-name">[components/modal-dialog]</p>
 	<div class="Overlay" {{action "close"}}>
 		<div class="Modal" {{action bubbles=false}}>
 			{{yield}}
