--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,5 @@
-<p class="Template">[index]</p>
-<h1>{{title}}</h1>
-<div class="Body">{{format-markdown body}}</div>
+<div class="Area">
+	<p class="Area-name">[index]</p>
+	<h1>{{title}}</h1>
+	<div class="Body">{{format-markdown body}}</div>
+</div>
