--- a/app/templates/page.hbs
+++ b/app/templates/page.hbs
@@ -1,3 +1,5 @@
-<p class="Template">[page]</p>
-<h1>{{unbound title}}</h1>
-<div class="Body">{{unbound format-markdown body}}</div>
+<div class="Area">
+	<p class="Area-name">[page]</p>
+	<h1>{{unbound title}}</h1>
+	<div class="Body">{{unbound format-markdown body}}</div>
+</div>
