--- a/app/templates/_navigation.hbs
+++ b/app/templates/_navigation.hbs
@@ -1,3 +1,5 @@
-<p class="Template">[_navigation]</p>
-{{#link-to 'posts'}}Posts{{/link-to}}
-{{#link-to 'about'}}About{{/link-to}}
+<div class="Area">
+	<p class="Area-name">[_navigation]</p>
+	{{#link-to 'posts'}}Posts{{/link-to}}
+	{{#link-to 'about'}}About{{/link-to}}
+</div>
