--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -1,8 +1,8 @@
-<p class="Template">[post]</p>
-<div class="modalshouldbehere">
-{{#modal-dialog action="close"}}
-	<h1>{{unbound title}}</h1>
-	{{unbound format-markdown body}}
+<div class="Area">
+	<p class="Area-name">[post]</p>
+
+	<h1>{{title}}</h1>
+	{{format-markdown body}}
+
 	<button class="Button Button--close" {{action close}}>&times;</button>
-{{/modal-dialog}}
 </div>
