--- a/app/templates/page.hbs
+++ b/app/templates/page.hbs
@@ -1,5 +1,5 @@
 <div class="Area">
 	<p class="Area-name">[page]</p>
-	<h1>{{unbound title}}</h1>
-	<div class="Body">{{unbound format-markdown body}}</div>
+	<h1>{{title}}</h1>
+	<div class="Body">{{format-markdown body}}</div>
 </div>
