--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,7 +8,7 @@ $maroon: #85144B;
 	box-sizing: border-box;
 }
 body {
-	margin: 2rem;
+	margin: 1rem;
 	background-color: #fafafa;
 }
 h1,h2,h3,p,ul {
@@ -31,6 +31,7 @@ a {
 }
 nav {
 	display: none;
+	margin-bottom: 1rem;
 	a {
 		margin-right: 0.5rem;
 	}
@@ -43,16 +44,17 @@ nav {
 
 /* For debugging */
 .Area {
-	border: 2px solid;
-	margin: 0 0 1em;
-	padding: 1em;
+	// border: 2px solid;
+	// margin: 0 0 1em;
+	// padding: 1em;
 }
 .Area--outlet {
 	border-color: $red !important;
 }
 .Area-name {
-	font-family: monospace;
-	color: #888;
+	display: none;
+	// font-family: monospace;
+	// color: #888;
 }
 
 
