Attempt at adding pages with slugs

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,7 +9,7 @@ $maroon: #85144B;
 }
 body {
 	margin: 1rem;
-	background-color: red;
+	background-color: #fafafa;
 }
 h1,h2,h3,p,ul {
 	margin: 0 0 1rem;
