--- a/app/templates/_navigation.hbs
+++ b/app/templates/_navigation.hbs
@@ -1,5 +1,5 @@
 <div class="Area">
 	<p class="Area-name">[_navigation]</p>
 	{{#link-to 'posts'}}Posts{{/link-to}}
-	{{#link-to 'about'}}About{{/link-to}}
+	{{#link-to 'pages'}}Pages{{/link-to}}
 </div>
