--- a/app/templates/page.hbs
+++ b/app/templates/page.hbs
@@ -1,5 +1,6 @@
 <div class="Area">
 	<p class="Area-name">[page]</p>
 	<h1>{{title}}</h1>
+	<p>Slug: <strong>{{slug}}</strong></p>
 	<div class="Body">{{format-markdown body}}</div>
 </div>
