--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,26 +1,14 @@
-<div class="Area">
-	<p class="Area-name">[application]</p>
+<p>{{#link-to 'index'}}<strong>{{siteTitle}}</strong>{{/link-to}}</p>
 
-	<p>{{#link-to 'index'}}<strong>{{unbound siteTitle}}</strong>{{/link-to}}</p>
+<p><button {{action 'toggleNavigation'}}>Toggle navigation</button></p>
+<nav {{bind-attr class=":Nav showNavigation:is-active"}}>
+	{{partial 'navigation'}}
+</nav>
 
-	<p><button {{action 'toggleNavigation'}}>Toggle navigation</button></p>
-	<nav {{bind-attr class=":Default showNavigation:is-active"}}>
-		{{partial 'navigation'}}
-	</nav>
+{{outlet}}
 
-	<div class="Area Area--outlet">
-		<p class="Area-name">[outlet of application]</p>
-		{{outlet}}
-	</div>
-
-	<div class="Area Area--outlet">
-		<p class="Area-name">[outlet modal of application]</p>
-
-		<div class="Overlay" {{action 'closeModal'}}>
-			<div class="Modal" {{action 'nothing' bubbles=false}}>
-				{{outlet modal}}
-			</div>
-		</div>
-
+<div class="Overlay" {{action 'closeModal'}}>
+	<div class="Modal" {{action 'nothing' bubbles=false}}>
+		{{outlet modal}}
 	</div>
 </div>
