--- a/app/templates/modal.hbs
+++ b/app/templates/modal.hbs
@@ -1,6 +1,4 @@
-<div class="Area">
-	<p class="Area-name">[modal]</p>
-	<p>Modal dialog follows here:</p>
+<div class="ModalDialog">
 	{{#modal-dialog action="close"}}
 		<p>title: {{unbound title}}</p>
 		<button {{action "close"}}>&times;</button>
