--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<p>{{#link-to 'index'}}<strong>{{siteTitle}}</strong>{{/link-to}}</p>
+<p>{{#link-to 'index'}}<strong>{{title}}</strong>{{/link-to}}</p>
 
 <p><button {{action 'toggleNavigation'}}>Toggle navigation</button></p>
 <nav {{bind-attr class=":Nav showNavigation:is-active"}}>
