Commit current status

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,4 +1,6 @@
 <h1>Home: {{title}}</h1>
 
 {{render 'work' work}}
+<div style="height: 800px;"></div>
+<a name="about"></a>
 {{render 'about' about}}
