--- a/app/templates/_navigation.hbs
+++ b/app/templates/_navigation.hbs
@@ -1,4 +1,4 @@
-{{#link-to 'index'}}Index{{/link-to}}
 {{#link-to 'home'}}Home{{/link-to}}
+{{#link-to 'about'}}About{{/link-to}}
 {{#link-to 'posts'}}Posts{{/link-to}}
 {{#link-to 'pages'}}Pages{{/link-to}}
